--- a/client/package.json
+++ b/client/package.json
@@ -5,24 +5,26 @@
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "0.0.20",
-    "@material-ui/core": "^1.2.2",
+    "@material-ui/core": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.18.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
-    "react-dropzone": "^4.2.12",
-    "react-images": "^0.5.17",
-    "react-moment": "^0.7.7",
+    "react-dropzone": "^4.3.0",
+    "react-images": "^0.5.19",
+    "react-moment": "^0.7.9",
     "react-movement": "0.0.1",
-    "react-paypal-express-checkout": "^1.0.4",
-    "react-redux": "^5.0.7",
+    "react-paypal-express-checkout": "^1.0.5",
+    "react-redux": "^5.1.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.4.3",
-    "react-slick": "^0.23.1",
-    "redux": "^4.0.0",
+    "react-slick": "^0.23.2",
+    "redux": "^4.0.5",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0"
   },
@@ -47,7 +49,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy" : "http://localhost:3002"
-    
-  
+  "proxy": "http://localhost:3002",
+  "devDependencies": {
+    "@types/express": "^4.17.7"
+  }
 }
