--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
     "server": "nodemon server/server.js",
-    "client" : "npm run start --prefix client",
-    "dev" : "concurrently \"npm run server\" \"npm run client\""
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
@@ -23,5 +23,8 @@
     "express-formidable": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.7"
   }
 }
